# AILiveTranscriber

./: .env.example  .gitignore  LOCAL-TOOLS.md  README.md  TRANSCRIPTION_API_INTEGRATION_GUIDE.md  Tauri_Features_Roadmap_for_AILiveTranscriber.md  composer.json  documentation.md  enable-local-tools.ps1  package-lock.json  package.json  tauri.dilg.conf.json  tauri.empty.conf.json  tauri.jerva.conf.json  tauri.release.conf.json  vite.config.js
.cargo/: config  config.toml
.github/workflows/: release.yml
app/Exceptions/: DeepgramSpeechToTextException.php  ElevenLabsSpeechToTextException.php  GeminiTranscriptCleanerException.php  SpeechToTextException.php  TranscriptPolisherException.php
bootstrap/: app.php
config/: app.php  services.php
database/: database.sqlite
node/: npm.cmd
php/: php.ini  php.ini-development  php.ini-production
public/: loader.js  notification.js
resources/js/: app.js
routes/: console.php  web.php
scripts/: build-desktop.mjs  clean-tauri-cache.mjs  clear-dev-port.php  create-update-package.mjs  dev-local.mjs  download-whisper-model.ps1  prepare-desktop.mjs  push-tauri-update.ps1  resource-profile.mjs  run-php.mjs  start-tauri-dev.ps1  test-updater.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/jerva/: icon.icns
src-tauri/src/: main.rs  offline_whisper.rs  offline_whisper_worker.rs  offline_whisper_worker_cli.rs  speaker_diarization.rs  speaker_diarization_worker.rs
vad-cli/: Cargo.toml
(+168 files in other folders)
