[package]
name = "app"
version = "1.0.9"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aitranscriber"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
serde_json = "1.0"

[features]
default = []
vulkan = ["whisper-rs/vulkan"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
whisper-rs = { version = "=0.16.0", default-features = false }
hound = "3.5"
sherpa-onnx = { version = "=1.13.3", default-features = false, features = ["shared"] }
windows-sys = { version = "0.61", features = ["Win32_System_SystemInformation", "Win32_System_Threading"] }

# Keep local Tauri builds usable without retaining several gigabytes of PDB and
# incremental object data. Dependencies rarely need debug symbols in this app.
[profile.dev]
debug = 1
incremental = false

[profile.dev.package."*"]
debug = false

[profile.release]
debug = 0
incremental = false
strip = "symbols"
